new tex sources

--- a/tex/quantum-axioms-01.tex
+++ b/tex/quantum-axioms-01.tex
@@ -16,7 +16,7 @@
 \section{States}
 
 \begin{axiom}
-With every quantum system there is associated a complex separable Hilbert space $(\mathfrak{H}, +, \cdot, \langle\phantom{m}\rangle)$. The states of the system are all positive trace-class linear maps $\varrho:\mathfrak{H}\rightarrow\mathfrak{H}$ for which $\tr\varrho = 1$
+With every quantum system there is associated a complex separable Hilbert space $(\mathfrak{H}, +, \cdot, \langle\diamond,\diamond\rangle)$. The states of the system are all positive trace-class linear maps $\varrho:\mathfrak{H}\rightarrow\mathfrak{H}$ for which $\tr\varrho = 1$
 \end{axiom}
 
 \begin{remark}
@@ -38,7 +38,7 @@ Thus for pure states it is true that state $\varrho$ is associated with the elem
 \end{remark}
 
 \begin{description}
-\item[Complex Hilbert space] $(\mathfrak{H}, +, \cdot, \langle\phantom{m}\rangle)$
+\item[Complex Hilbert space] $(\mathfrak{H}, +, \cdot, \langle\diamond,\diamond\rangle)$
 \end{description}
 
 \begin{itemize}
@@ -49,7 +49,7 @@ Thus for pure states it is true that state $\varrho$ is associated with the elem
 \item $\phantom{+}\cdot:\mathbb{C}\times\mathfrak{H}\rightarrow\mathfrak{H}$
 \end{itemize}
 
-\item Sesquilinear map $\langle.,.\rangle:\mathfrak{H}\times\mathfrak{H}\rightarrow\mathbb{C}$ satisfying
+\item Sesquilinear map $\langle\diamond,\diamond\rangle:\mathfrak{H}\times\mathfrak{H}\rightarrow\mathbb{C}$ satisfying
 
 \begin{itemize}
 \item $\langle\phi,\psi\rangle = \overline{\langle\psi,\phi\rangle}$ (complex conjugate)
