using DiffEqPhysics.jl

--- a/ode/double_pendulum/jupyter/dpendulum_hamilton_julia.ipynb
+++ b/ode/double_pendulum/jupyter/dpendulum_hamilton_julia.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Double pendulum"
+    "# Double pendulum. Hamiltonian dynamics"
    ]
   },
   {
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using DiffEqPhysics\n",
     "using DifferentialEquations\n",
     "using Plots"
    ]
@@ -23,13 +24,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Equations of motion\n",
+    "### Hamiltonian $\\mathcal{H}(p, \\theta)$\n",
     "\n",
     "$$\n",
     "\\mathcal{H} = \\dfrac{1}{2}\n",
     "\\dfrac{p_1^2 + 2 p_2^2 - 2 p_1 p_2 \\cos(\\theta_1 - \\theta_2)}{2 - \\cos(\\theta_1 - \\theta_2)^2} +\n",
     "3 - 2 \\cos{\\theta_1} - \\cos{\\theta_2}\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -38,14 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function dpendulum(du, u, p, t)\n",
-    "    cdiff = cos(u[1] - u[2])\n",
-    "    detM = 2 - cdiff^2\n",
-    "    W = (sin(u[1] - u[2]) / detM^2) * ((u[3]^2 + 2*u[4]^2)*cdiff - u[3]*u[4]*(4 - detM))\n",
-    "    du[1] = (u[3] - u[4]*cdiff) / detM;\n",
-    "    du[2] = (2*u[4] - u[3]*cdiff) / detM\n",
-    "    du[3] = -2*sin(u[1]) + W\n",
-    "    du[4] = -sin(u[2]) - W\n",
+    "function H(p, q, param = nothing)\n",
+    "    E = (1/2)*(p[1]^2 + 2*p[2]^2 - 2*p[1]*p[2]*cos(q[1] - q[2]))/(2 - cos(q[1] - q[2])^2) + 3 - 2*cos(q[1]) - cos(q[2])\n",
     "end"
    ]
   },
@@ -54,46 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constant of motion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function energy(u)\n",
-    "    e = (1/2)*(u[3]^2 + 2*u[4]^2 - 2*u[3]*u[4]*cos(u[1] - u[2]))/(2 - cos(u[1] - u[2])^2) + 3 - 2*cos(u[1]) - cos(u[2])\n",
-    "end"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initial conditions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u0 = [0.0, pi/2, 0.0, 0.0]\n",
-    "#u0 = [pi/3, 0*pi/2, 0.0, 0.0]\n",
-    "\n",
-    "energy(u0)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Time scale"
+    "### Time span and initial conditions"
    ]
   },
   {
@@ -103,7 +59,12 @@
    "outputs": [],
    "source": [
     "t_max = 384.0\n",
-    "t_step = 0.02 "
+    "t_step = 0.02\n",
+    "\n",
+    "p0 = [0.0, 0.0]\n",
+    "q0 = [0.0, pi/2]\n",
+    "#q0 = [3.0*pi/12, -acos(1.0 - 2*cos(3.0*pi/12))]\n",
+    "H(p0, q0)"
    ]
   },
   {
@@ -120,9 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob = ODEProblem(dpendulum, u0, (0.0, t_max))\n",
-    "sol = solve(prob, Vern7(), adaptive=false, dt=t_step)\n",
-    "data = reduce(hcat, sol.u)'"
+    "problem = HamiltonianProblem(H, p0, q0, (0, t_max))\n",
+    "solution = solve(problem, Vern6(), adaptive=false, dt = t_step)\n",
+    "data = reduce(hcat, solution.u)'"
    ]
   },
   {
@@ -130,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase section $(\\theta_1, p_1)$"
+    "### Orbit $(\\theta_1, p_1)$"
    ]
   },
   {
@@ -139,8 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Plots.scalefontsizes()\n",
+    "Plots.scalefontsizes(0.5)\n",
     "plotOrbit = scatter(\n",
-    "    data[:,1], data[:,3],\n",
+    "    data[:, 3], data[:, 1],\n",
     "    aspect_ratio = 1,\n",
     "    xlabel = \"\\\\theta_1\",\n",
     "    ylabel = \"\\\\pi_1\",\n",
@@ -153,7 +116,7 @@
     "annotate!(\n",
     "    xlims(plotOrbit)[1] + 0.12*(xlims(plotOrbit)[2] - xlims(plotOrbit)[1]),\n",
     "    ylims(plotOrbit)[2] - 0.03*(ylims(plotOrbit)[2] - ylims(plotOrbit)[1]),\n",
-    "    text(\"E = $(round(energy(u0), digits=4))\", :red, :right, 4)\n",
+    "    text(\"E = $(round(H(p0, q0), digits=4))\", :red, :right, 4)\n",
     ")"
    ]
   },
@@ -171,16 +134,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Plots.scalefontsizes()\n",
+    "Plots.scalefontsizes(0.5)\n",
     "plotEnergy = scatter(\n",
-    "    sol.t,\n",
+    "    solution.t,\n",
     "    map(eachrow(data)) do s\n",
-    "        energy(s) - energy(u0)\n",
+    "        H([s[1], s[2]], [s[3], s[4]]) - H(p0, q0)\n",
     "    end,\n",
     "    xlabel = \"t\",\n",
     "    ylabel = \"Energy error - \\\\Delta E\",\n",
     "    plot_title = \"Double pendulum\",\n",
-    "    markersize = 0.5,\n",
-    "    alpha = 0.25,\n",
+    "    markersize = 0.4,\n",
+    "    alpha = 0.15,\n",
     "    legend = false,\n",
     "    dpi = 300\n",
     ")"
