--- a/ode/double_pendulum/jupyter/dpendulum_lagrange_julia.ipynb
+++ b/ode/double_pendulum/jupyter/dpendulum_lagrange_julia.ipynb
@@ -90,25 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial conditions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u0 = [0, pi/2, 0.0, 0.0]\n",
-    "#u0 = [pi/3, 0.0, 0.0, 0.0]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Time scale"
+    "### Time span and initial conditions"
    ]
   },
   {
@@ -118,7 +100,11 @@
    "outputs": [],
    "source": [
     "t_max = 384.0\n",
-    "t_step = 0.02 "
+    "t_step = 0.02\n",
+    "\n",
+    "u0 = [0, pi/2, 0.0, 0.0]\n",
+    "#u0 = [3*pi/12, -acos(1.0 - 2*cos(3*pi/12)), 0, 0]\n",
+    "energy(u0)"
    ]
   },
   {
@@ -154,6 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Plots.scalefontsizes()\n",
+    "Plots.scalefontsizes(0.5)\n",
     "plotOrbit = scatter(\n",
     "    data[:,1], data[:,3],\n",
     "    aspect_ratio = 1,\n",
@@ -186,6 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Plots.scalefontsizes()\n",
+    "Plots.scalefontsizes(0.5)\n",
     "plotEnergy = scatter(\n",
     "    sol.t,\n",
     "    map(eachrow(data)) do s\n",
